MDL-88148 theme_boost: Fix drawers toggle alignment

--- a/public/theme/boost/scss/moodle/drawer.scss
+++ b/public/theme/boost/scss/moodle/drawer.scss
@@ -198,7 +198,7 @@ $right-drawer-width: 320px;
 
         .drawertoggle {
             margin-left: auto;
-            margin-right: 5px;
+            margin-right: map-get($spacers, 2);
         }
     }
     &.drawer-left {
@@ -216,7 +216,7 @@ $right-drawer-width: 320px;
 
         .drawertoggle {
             margin-left: auto;
-            margin-right: 5px;
+            margin-right: map-get($spacers, 2);
         }
     }
     &.drawer-bottom {
@@ -275,7 +275,11 @@ $right-drawer-width: 320px;
     }
     .draweractions {
         display: flex;
+        gap: map-get($spacers, 1);
         margin-left: map-get($spacers, 2);
+        .btn {
+            --#{$prefix}btn-color: #{$gray-700};
+        }
     }
 }
 .drawer.scrolled .drawerheader {
