--- a/public/theme/boost/style/moodle.css
+++ b/public/theme/boost/style/moodle.css
@@ -32208,7 +32208,7 @@ body.drawer-ease {
 }
 .drawer.drawer-right .drawertoggle {
   margin-left: auto;
-  margin-right: 5px;
+  margin-right: 0.5rem;
 }
 .drawer.drawer-left {
   transition: left 0.2s ease, top 0.2s ease, bottom 0.2s ease, visibility 0.2s ease;
@@ -32228,7 +32228,7 @@ body.drawer-ease {
 }
 .drawer.drawer-left .drawertoggle {
   margin-left: auto;
-  margin-right: 5px;
+  margin-right: 0.5rem;
 }
 .drawer.drawer-bottom {
   bottom: -110%;
@@ -32269,7 +32269,11 @@ body.drawer-ease {
 }
 .drawerheader .draweractions {
   display: flex;
+  gap: 0.25rem;
   margin-left: 0.5rem;
+}
+.drawerheader .draweractions .btn {
+  --bs-btn-color: #495057;
 }
 
 .drawer.scrolled .drawerheader {
@@ -32319,7 +32323,7 @@ body.drawer-ease {
 @media (max-width: 991.98px) {
   .drawer-md.drawer-right .drawertoggle {
     margin-left: auto;
-    margin-right: 5px;
+    margin-right: 0.5rem;
   }
 }
 @media (max-width: 991.98px) {
@@ -32345,7 +32349,7 @@ body.drawer-ease {
 @media (max-width: 991.98px) {
   .drawer-md.drawer-left .drawertoggle {
     margin-left: auto;
-    margin-right: 5px;
+    margin-right: 0.5rem;
   }
 }
 @media (max-width: 991.98px) {
@@ -32405,7 +32409,7 @@ body.drawer-ease {
 @media (max-width: 767.98px) {
   .drawer-sm.drawer-right .drawertoggle {
     margin-left: auto;
-    margin-right: 5px;
+    margin-right: 0.5rem;
   }
 }
 @media (max-width: 767.98px) {
@@ -32431,7 +32435,7 @@ body.drawer-ease {
 @media (max-width: 767.98px) {
   .drawer-sm.drawer-left .drawertoggle {
     margin-left: auto;
-    margin-right: 5px;
+    margin-right: 0.5rem;
   }
 }
 @media (max-width: 767.98px) {
